--- a/CC_Open_Source/assets/static/style.css
+++ b/CC_Open_Source/assets/static/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: 'Roboto Condensed', sans-serif;
     margin: 50px 25px;
+    padding: 16px;
+    color: #333333;
 }
 
 .welcome {
@@ -15,4 +17,16 @@ body {
     position: absolute;
     bottom: 0.5em;
     left: 0.5em;
+}
+
+button {
+    background-color: #FB7729;
+    color: white;
+    font-size: 1rem;
+    padding: 8px;
+    text-transform: uppercase;
+    border-radius: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
+    box-shadow: none;
 }
